Fix navbar padding on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -634,7 +634,8 @@ body {
   }
 
   .nav-container {
-    padding: 1.2rem;
+    padding-bottom: 1.2rem;
+    padding-top: 0.5rem;
     gap: 0.1rem;
     justify-content: center;
     display: flex;
